Update .css to fix boxes on mobile

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ legend {font-weight: bold;}
     border-radius: 10px;
     padding: 20px;
     margin: 20px auto;
-    width: fit-content;
+    width: auto;
     display:grid;
     }
 
